deployment.yaml
---
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate  # rolling update is not recommended for MySQL (DB should use Recreate or StatefulSet.)
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          requests: 
            memory: "512Mi" # Minimum resources required
            cpu: "250m"
          limits: 
            memory: "1Gi" # Maximum resources allowed
            cpu: "500m"
---
# Java Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate  # Tells Kubernetes to update pods one-by-one.
    rollingUpdate:
      maxSurge: 1            # one extra pod can be added during update (ensures zero downtime).
      maxUnavailable: 0      # Not even one pod is allowed to go down until the new pod becomes fully ready. (keep ALL replicas available during the update.)
      
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: devika12345/myapp
        ports:
        - containerPort: 8080
