service.yaml
---
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql

---
# Bank Application Service
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: ClusterIP   # beca you using ALB hence cluster IP type is recommended
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
